about page contents have been added

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -38,16 +38,16 @@
                 <a href="#home" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-                <a href="#pages/about.html" class="nav-link">About</a>
+                <a href="pages/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="#pages/services.html" class="nav-link">Services</a>
+                <a href="pages/services.html" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
-                <a href="#pages/projects.html" class="nav-link">Projects</a>
+                <a href="pages/projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-                <a href="#pages/contact.html" class="nav-link">Contact</a>
+                <a href="pages/contact.html" class="nav-link">Contact</a>
             </li>
         </ul>
         <div class="social">
@@ -162,152 +162,150 @@
     </section>
 
     <!-- === Testimonial === -->
-    <section id="swiper">
-        <h1 class="testimonial">Testimonials</h1>
-        <div class="containr">
-            <div class="swiper mySwiper container">
-                <div class="swiper-wrapper content">
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+    <section id="testimonial">
+        <h1 class="testimonial-heading">Testimonials</h1>
+        <div class="swiper mySwiper container">
+            <div class="swiper-wrapper content">
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
-                    <div class="swiper-slide card">
-                        <div class="card-content">
-                            <div class="card-image">
-                                <img src="assets/img/avatar/avatar.png" alt="" srcset="">
-                            </div>
-                            <div class="name-profession">
-                                <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder - Fastnet</span>
-                            </div>
-                            <div class="review">
-                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
-                            </div>
-
+                </div>
+                <div class="swiper-slide card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <img src="assets/img/avatar/avatar.png" alt="" srcset="">
                         </div>
+                        <div class="name-profession">
+                            <span class="name">Francis Lubida</span>
+                            <span class="profession">CEO & Founder - Fastnet</span>
+                        </div>
+                        <div class="review">
+                            <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
     </section>
 
 
