--- a/fastnet/pages/about.html
+++ b/fastnet/pages/about.html
@@ -85,21 +85,50 @@
         </div>
     </section>
 
-    <!-- === Featured-3 === -->
-    <section id="featured-3">
+    <!-- === Ours === -->
+    <section id="ours">
         <div class="container">
-            <div class="row">
-                <div class="featured-3-img">
-                    <img src="../assets/img/attendance/attendance3.png" alt="">
+            <div class="grid">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>Vision</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
                 </div>
-                <div class="featured-3-text">
-                    <h1>Attendance systems</h1>
-                    <p>
-                        Easy tracking and monitoring of the attendance of employees, students, or any other group of individuals under top quality automated process of attendance tracking and reporting.
-                    </p>
-                    <a href="" class="btn btn-primary mt-1"> Read More</a>
+                <div class="card">
+                    <div class="card-body">
+                        <h2>Mission</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
                 </div>
             </div>
+            <div class="grid">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>Objectives</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h2>Values</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
