--- a/fastnet/pages/about.html
+++ b/fastnet/pages/about.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col">
                     <h3>Quick Links</h3>
-                    <nav>
+                    <nav class="footer-nav">
                         <a href="../index.html">Home</a>
                         <a href="#home">About</a>
                         <a href="services.html">Services</a>
@@ -282,7 +282,7 @@
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/index.js"></script>
+    <script src="../assets/js/about.js"></script>
     <!-- End Scripts -->
 </body>
 
