--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -331,7 +331,7 @@
                 </div>
                 <div class="col">
                     <h3>Quick Links</h3>
-                    <nav>
+                    <nav class="footer-nav">
                         <a href="#home">Home</a>
                         <a href="pages/about.html">About</a>
                         <a href="pages/services.html">Services</a>
