--- a/fastnet/pages/about.html
+++ b/fastnet/pages/about.html
@@ -88,7 +88,7 @@
     <!-- === Ours === -->
     <section id="ours">
         <div class="container">
-            <div class="grid">
+            <div class="grid-2">
                 <div class="card">
                     <div class="card-body">
                         <h2>Vision</h2>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid">
+            <div class="grid-2">
                 <div class="card">
                     <div class="card-body">
                         <h2>Objectives</h2>
