--- a/fastnet/pages/contact.html
+++ b/fastnet/pages/contact.html
@@ -64,8 +64,8 @@
     </nav>
 
 
-    <!-- === About header === -->
-    <section id="about-header">
+    <!-- === Contact header === -->
+    <section id="contact-header">
         <div class="container">
             <div class="row">
                 <p class="display-2">Contact Us</p>
@@ -73,37 +73,24 @@
         </div>
     </section>
 
-    <!-- === About === -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <p>
-                    We are firm for the design, installation, and maintenance of CCTV systems. We have vast experience in CCTV systems, HD CCTV, AHD, TVI, IP CCTV, High Megapixel Resolution and 4K. With over 5 years of experience in CCTV installations, we always provide
-                    a cost-effective security solution for home and business owners.
-                </p>
-            </div>
-        </div>
-    </section>
 
-    <!-- === Ours === -->
-    <section id="ours">
+    <!-- === Contact === -->
+    <section id="contact">
         <div class="container">
             <div class="grid-2">
                 <div class="card">
                     <div class="card-body">
-                        <h2>Vision</h2>
+                        <h2 class="text-primary"><i class="fas fa-map-marker-alt"></i> Location</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            Kinondoni, Dar es salaam, Tanzania
                         </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h2>Mission</h2>
+                        <h2 class="text-primary"><i class="fas fa-globe"></i> Website</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            www.fastnet.co.tz
                         </p>
                     </div>
                 </div>
@@ -111,19 +98,18 @@
             <div class="grid-2">
                 <div class="card">
                     <div class="card-body">
-                        <h2>Objectives</h2>
+                        <h2 class="text-primary"><i class="fas fa-envelope"></i> Email</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            info@fastnet.co.tz
                         </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h2>Values</h2>
+                        <h2 class="text-primary"><i class="fas fa-phone-alt"></i> Phone</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            +255 748 111 800
+                            <br> +255 672 111 800
                         </p>
                     </div>
                 </div>
@@ -133,83 +119,11 @@
     </section>
 
 
-    <!-- === Team === -->
-    <section id="team">
-        <h1 class="team-heading">Meet Our Team</h1>
-        <div class="container">
-            <div class="even-columns">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar1.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar2.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- === Map === -->
+    <section id="map">
+        <iframe title="fastnet map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.8193095989013!2d39.26193551474248!3d-6.791828595090909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4d70055d7c37%3A0x86665a7d764c5bb2!2sKINONDONI%20STUDIO!5e0!3m2!1sen!2stz!4v1678692175636!5m2!1sen!2stz"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-
-
-
 
     <footer id="footer">
         <div class="container">
