--- a/fastnet/pages/projects.html
+++ b/fastnet/pages/projects.html
@@ -64,8 +64,8 @@
     </nav>
 
 
-    <!-- === About header === -->
-    <section id="about-header">
+    <!-- === Project header === -->
+    <section id="project-header">
         <div class="container">
             <div class="row">
                 <p class="display-2">What We've Done</p>
@@ -73,25 +73,43 @@
         </div>
     </section>
 
-    <!-- === About === -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <p>
-                    We are firm for the design, installation, and maintenance of CCTV systems. We have vast experience in CCTV systems, HD CCTV, AHD, TVI, IP CCTV, High Megapixel Resolution and 4K. With over 5 years of experience in CCTV installations, we always provide
-                    a cost-effective security solution for home and business owners.
-                </p>
-            </div>
-        </div>
-    </section>
 
-    <!-- === Ours === -->
-    <section id="ours">
+    <!-- === Projects === -->
+    <section id="projects">
         <div class="container">
+            <div class="grid-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>CCTV Installation</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h2>CCTV Installation</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h2>CCTV Installation</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
+                            quo.
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="grid-2">
                 <div class="card">
                     <div class="card-body">
-                        <h2>Vision</h2>
+                        <h2>CCTV Installation</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
                             quo.
@@ -100,27 +118,7 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h2>Mission</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-2">
-                <div class="card">
-                    <div class="card-body">
-                        <h2>Objectives</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h2>Values</h2>
+                        <h2>CCTV Installation</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
                             quo.
@@ -131,85 +129,6 @@
         </div>
         </div>
     </section>
-
-
-    <!-- === Team === -->
-    <section id="team">
-        <h1 class="team-heading">Meet Our Team</h1>
-        <div class="container">
-            <div class="even-columns">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar1.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar2.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
 
     <footer id="footer">
         <div class="container">
