--- a/fastnet/pages/services.html
+++ b/fastnet/pages/services.html
@@ -64,8 +64,8 @@
     </nav>
 
 
-    <!-- === About header === -->
-    <section id="about-header">
+    <!-- === Services header === -->
+    <section id="services-header">
         <div class="container">
             <div class="row">
                 <p class="display-2">What We Do</p>
@@ -73,143 +73,100 @@
         </div>
     </section>
 
-    <!-- === About === -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <p>
-                    We are firm for the design, installation, and maintenance of CCTV systems. We have vast experience in CCTV systems, HD CCTV, AHD, TVI, IP CCTV, High Megapixel Resolution and 4K. With over 5 years of experience in CCTV installations, we always provide
-                    a cost-effective security solution for home and business owners.
-                </p>
-            </div>
-        </div>
-    </section>
 
-    <!-- === Ours === -->
-    <section id="ours">
+    <!-- === services === -->
+    <section id="services">
         <div class="container">
-            <div class="grid-2">
+            <div class="grid-3">
                 <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt="" class="card-img-top fluid">
+                        </div>
+                    </div>
                     <div class="card-body">
-                        <h2>Vision</h2>
+                        <h2>it infrastructure</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
+                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-body">
-                        <h2>Mission</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
-                        </p>
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt="" class="card-img-top fluid">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="grid-2">
-                <div class="card">
                     <div class="card-body">
-                        <h2>Objectives</h2>
+                        <h2>it infrastructure</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
+                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-img">
+                        <div class="inner">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt="" class="card-img-top fluid">
+                        </div>
+                    </div>
                     <div class="card-body">
-                        <h2>Values</h2>
+                        <h2>it infrastructure</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem inventore? Voluptate pariatur doloremque dicta voluptatum sapiente illo reprehenderit molestias rem deleniti
-                            quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
                         </p>
+                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </section>
-
-
-    <!-- === Team === -->
-    <section id="team">
-        <h1 class="team-heading">Meet Our Team</h1>
-        <div class="container">
-            <div class="even-columns">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar1.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
+            <div class="grid-3 ">
+                <div class="card ">
+                    <div class="card-img ">
+                        <div class="inner ">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg " alt=" " class="card-img-top fluid ">
                         </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar2.png" alt="" srcset="">
-                        </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
+                    <div class="card-body ">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <img src="../assets/img/avatar/avatar.png" alt="" srcset="">
+                <div class="card ">
+                    <div class="card-img ">
+                        <div class="inner ">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid ">
                         </div>
-                        <div class="social">
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
+                    </div>
+                    <div class="card-body ">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
+                    </div>
+                </div>
+                <div class="card ">
+                    <div class="card-img ">
+                        <div class="inner ">
+                            <img src="../assets/img/it-infrastructure/it-infrastructure3.jpg" alt=" " class="card-img-top fluid ">
                         </div>
-                        <div class="name-profession">
-                            <span class="name">Francis Lubida</span>
-                            <span class="profession">CEO & Founder</span>
-                        </div>
+                    </div>
+                    <div class="card-body ">
+                        <h2>it infrastructure</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi. Voluptatum rerum quis repellat voluptatibus aliquid exercitationem
+                        </p>
+                        <a href=" " class="btn btn-primary mb-1 ">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-
 
     <footer id="footer">
         <div class="container">
@@ -277,12 +234,12 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js " integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin=" anonymous "></script>
     <!-- jQuery Offline -->
-    <script src="../assets/vendors/jquery/jquery.min.js"></script>
+    <script src="../assets/vendors/jquery/jquery.min.js "></script>
     <!-- Main JS -->
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/services.js"></script>
+    <script src="../assets/js/main.js "></script>
+    <script src="../assets/js/services.js "></script>
     <!-- End Scripts -->
 </body>
 
